update helm chart with randomstring

--- a/helm_chart/app/templates/deployment.yaml
+++ b/helm_chart/app/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "app.fullname" . }}
+  annotations:
+    deploymentId: {{ randAlphaNum 25 | quote }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
 spec:
