--- a/helm_chart/app/templates/deployment.yaml
+++ b/helm_chart/app/templates/deployment.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.blueGreen.enabled false }}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -63,3 +64,4 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+  {{- end }}
