--- a/helm_chart/app/templates/service.yaml
+++ b/helm_chart/app/templates/service.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.blueGreen.enabled false }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -13,3 +14,4 @@ spec:
       name: http
   selector:
     {{- include "app.selectorLabels" . | nindent 4 }}
+  {{- end }}
