--- a/helm_chart/app/templates/tests/test-connection.yaml
+++ b/helm_chart/app/templates/tests/test-connection.yaml
@@ -1,3 +1,4 @@
+{{- if eq .Values.blueGreen.enabled false }}
 apiVersion: v1
 kind: Pod
 metadata:
@@ -13,3 +14,4 @@ spec:
       command: ['wget']
       args: ['{{ include "app.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
+{{- end }}
