--- a/helm_chart/app/templates/route.yaml
+++ b/helm_chart/app/templates/route.yaml
@@ -1,9 +1,8 @@
-{{- if .Values.blueGreen.enabled }}
-{{- if .Values.blueGreen.blue.tag }}
+{{- if eq .Values.blueGreen.enabled false }}
 kind: Route
 apiVersion: route.openshift.io/v1
 metadata:
-  name: {{ include "app.fullname" . }}-{{ .Values.blueGreen.blue.name }}
+  name: {{ include "app.fullname" . }}
   labels:
     {{- include "app.labels" . | nindent 4 }}
 spec:
@@ -11,22 +10,6 @@ spec:
     targetPort: http
   to:
     kind: Service
-    name: {{ include "app.fullname" . }}-{{ .Values.blueGreen.blue.name }}
+    name: {{ include "app.fullname" . }}
 ---
-{{- end }}
-{{- if .Values.blueGreen.green.tag }}
-kind: Route
-apiVersion: route.openshift.io/v1
-metadata:
-  name: {{ include "app.fullname" . }}-{{ .Values.blueGreen.green.name }}
-  labels:
-    {{- include "app.labels" . | nindent 4 }}
-spec:
-  port:
-    targetPort: http
-  to:
-    kind: Service
-    name: {{ include "app.fullname" . }}-{{ .Values.blueGreen.green.name }}
----
-{{- end }}
 {{- end }}
