update with blue-green deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-greeting.message.v1=Hello World 123
-greeting.message.v2=This is Quarkus by RedHat.
+greeting.message.v1=Response from v1 endpoint
+greeting.message.v2=Response from v2 endpoint
 
 quarkus.swagger-ui.always-include=true
